--- a/src/index.html
+++ b/src/index.html
@@ -288,7 +288,7 @@
                             </div>
                             <div class="links">
                                 <a href="https://github.com/seif1000/pixabay-galerie" class="git"target='_blank'><span class="fab fa-github"></span> Github</a>
-                                <a href="https://contactform-6f79d.firebaseapp.com/"target='_blank'><i class="fas fa-eye"></i> Project</a>
+                                <a href="https://seif1000.github.io/pixabay-galerie/"target='_blank'><i class="fas fa-eye"></i> Project</a>
                             </div>
                       </div>
                 </div>
